--- a/app/src/main/res/layout/activity_hoenn.xml
+++ b/app/src/main/res/layout/activity_hoenn.xml
@@ -4,9 +4,13 @@
     tools:context="danielfears.pokedex.HoennActivity"
     android:background="@drawable/background">
 
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Hoenn"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:layout_marginTop="15dp"
+        android:src="@drawable/hoenn"
+        />
 
 </RelativeLayout>
