--- a/app/src/main/res/layout/activity_unova.xml
+++ b/app/src/main/res/layout/activity_unova.xml
@@ -4,9 +4,12 @@
     tools:context="danielfears.pokedex.UnovaActivity"
     android:background="@drawable/background">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ImageView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Unova"/>
+        android:src="@drawable/unova"
+        android:adjustViewBounds="true"
+        android:layout_marginTop="15dp"
+        />
 
 </RelativeLayout>
