--- a/app/src/main/res/layout/activity_kanto.xml
+++ b/app/src/main/res/layout/activity_kanto.xml
@@ -13,4 +13,12 @@
         android:layout_marginTop="15dp"
         />
 
+    <SurfaceView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/charmander"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="300dp"/>
+
+
 </RelativeLayout>
