--- a/app/src/main/res/layout/activity_squirtle.xml
+++ b/app/src/main/res/layout/activity_squirtle.xml
@@ -2,20 +2,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="danielfears.pokedex.BulbasaurActivity"
+    tools:context="danielfears.pokedex.SquirtleActivity"
     android:background="@drawable/background">
 
     <SurfaceView
         android:layout_width="116dp"
         android:layout_height="116dp"
-        android:id="@+id/bulbasaur"
+        android:id="@+id/squirtle"
         android:layout_marginTop="120dp"
         android:layout_marginLeft="30dp"/>
 
     <ImageView
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:src="@drawable/bulbasaurinfo"
+        android:src="@drawable/squirtleinfo"
         android:adjustViewBounds="true"
         android:layout_marginLeft="150dp"
         android:layout_marginTop="110dp"/>
