--- a/app/src/main/res/layout/activity_sinnoh.xml
+++ b/app/src/main/res/layout/activity_sinnoh.xml
@@ -12,4 +12,49 @@
         android:layout_marginTop="22dp"
         />
 
+    <Button
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="270dp"
+        android:id="@+id/bulbasaur"
+        android:background="@drawable/turtwigbutton"
+        android:layout_marginLeft="20dp"/>
+
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/turtwigimg"
+        android:layout_marginTop="270dp"
+        android:layout_marginLeft="280dp"/>
+
+    <Button
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="340dp"
+        android:id="@+id/charmander"
+        android:background="@drawable/chimcharbutton"
+        android:layout_marginLeft="20dp"/>
+
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/chimcharimg"
+        android:layout_marginTop="340dp"
+        android:layout_marginLeft="280dp"/>
+
+    <Button
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="410dp"
+        android:id="@+id/squirtle"
+        android:background="@drawable/piplipbutton"
+        android:layout_marginLeft="20dp"/>
+
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/piplupimg"
+        android:layout_marginTop="410dp"
+        android:layout_marginLeft="280dp"/>
+
 </RelativeLayout>
