--- a/app/src/main/res/layout/activity_sinnoh.xml
+++ b/app/src/main/res/layout/activity_sinnoh.xml
@@ -16,7 +16,7 @@
         android:layout_width="250dp"
         android:layout_height="60dp"
         android:layout_marginTop="270dp"
-        android:id="@+id/bulbasaur"
+        android:id="@+id/turtwig"
         android:background="@drawable/turtwigbutton"
         android:layout_marginLeft="20dp"/>
 
@@ -31,7 +31,7 @@
         android:layout_width="250dp"
         android:layout_height="60dp"
         android:layout_marginTop="340dp"
-        android:id="@+id/charmander"
+        android:id="@+id/chimchar"
         android:background="@drawable/chimcharbutton"
         android:layout_marginLeft="20dp"/>
 
@@ -46,7 +46,7 @@
         android:layout_width="250dp"
         android:layout_height="60dp"
         android:layout_marginTop="410dp"
-        android:id="@+id/squirtle"
+        android:id="@+id/piplup"
         android:background="@drawable/piplipbutton"
         android:layout_marginLeft="20dp"/>
 
