--- a/app/src/main/res/layout/activity_kalos.xml
+++ b/app/src/main/res/layout/activity_kalos.xml
@@ -16,7 +16,7 @@
         android:layout_width="250dp"
         android:layout_height="60dp"
         android:layout_marginTop="270dp"
-        android:id="@+id/bulbasaur"
+        android:id="@+id/chespin"
         android:background="@drawable/chespinbutton"
         android:layout_marginLeft="20dp"/>
 
@@ -31,7 +31,7 @@
         android:layout_width="250dp"
         android:layout_height="60dp"
         android:layout_marginTop="340dp"
-        android:id="@+id/charmander"
+        android:id="@+id/fennekin"
         android:background="@drawable/fennekinbutton"
         android:layout_marginLeft="20dp"/>
 
@@ -46,7 +46,7 @@
         android:layout_width="250dp"
         android:layout_height="60dp"
         android:layout_marginTop="410dp"
-        android:id="@+id/squirtle"
+        android:id="@+id/froakie"
         android:background="@drawable/froakiebutton"
         android:layout_marginLeft="20dp"/>
 
