titles added to each region activity + spacing

--- a/app/src/main/res/layout/activity_hoenn.xml
+++ b/app/src/main/res/layout/activity_hoenn.xml
@@ -12,10 +12,17 @@
         android:src="@drawable/hoenn"
         />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/rubysapptext"
+        android:layout_marginTop="240dp"
+        android:layout_centerHorizontal="true"/>
+
     <Button
         android:layout_width="250dp"
         android:layout_height="60dp"
-        android:layout_marginTop="270dp"
+        android:layout_marginTop="280dp"
         android:id="@+id/treecko"
         android:background="@drawable/treeckobutton"
         android:layout_marginLeft="20dp"/>
@@ -24,13 +31,13 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/treeckoimg"
-        android:layout_marginTop="270dp"
+        android:layout_marginTop="280dp"
         android:layout_marginLeft="280dp"/>
 
     <Button
         android:layout_width="250dp"
         android:layout_height="60dp"
-        android:layout_marginTop="340dp"
+        android:layout_marginTop="360dp"
         android:id="@+id/torchic"
         android:background="@drawable/torchicbutton"
         android:layout_marginLeft="20dp"/>
@@ -39,13 +46,13 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/torchicimg"
-        android:layout_marginTop="340dp"
+        android:layout_marginTop="360dp"
         android:layout_marginLeft="280dp"/>
 
     <Button
         android:layout_width="250dp"
         android:layout_height="60dp"
-        android:layout_marginTop="410dp"
+        android:layout_marginTop="440dp"
         android:id="@+id/mudkip"
         android:background="@drawable/mudkipbutton"
         android:layout_marginLeft="20dp"/>
@@ -54,7 +61,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/mudkipimg"
-        android:layout_marginTop="410dp"
+        android:layout_marginTop="440dp"
         android:layout_marginLeft="280dp"/>
 
 </RelativeLayout>
