--- a/app/src/main/res/layout/activity_sinnoh.xml
+++ b/app/src/main/res/layout/activity_sinnoh.xml
@@ -9,13 +9,19 @@
         android:layout_height="wrap_content"
         android:src="@drawable/sinnoh"
         android:adjustViewBounds="true"
-        android:layout_marginTop="22dp"
-        />
+        android:layout_marginTop="22dp"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/diampearltext"
+        android:layout_marginTop="240dp"
+        android:layout_centerHorizontal="true"/>
 
     <Button
         android:layout_width="250dp"
         android:layout_height="60dp"
-        android:layout_marginTop="270dp"
+        android:layout_marginTop="280dp"
         android:id="@+id/turtwig"
         android:background="@drawable/turtwigbutton"
         android:layout_marginLeft="20dp"/>
@@ -24,13 +30,13 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/turtwigimg"
-        android:layout_marginTop="270dp"
+        android:layout_marginTop="280dp"
         android:layout_marginLeft="280dp"/>
 
     <Button
         android:layout_width="250dp"
         android:layout_height="60dp"
-        android:layout_marginTop="340dp"
+        android:layout_marginTop="360dp"
         android:id="@+id/chimchar"
         android:background="@drawable/chimcharbutton"
         android:layout_marginLeft="20dp"/>
@@ -39,13 +45,13 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/chimcharimg"
-        android:layout_marginTop="340dp"
+        android:layout_marginTop="360dp"
         android:layout_marginLeft="280dp"/>
 
     <Button
         android:layout_width="250dp"
         android:layout_height="60dp"
-        android:layout_marginTop="410dp"
+        android:layout_marginTop="440dp"
         android:id="@+id/piplup"
         android:background="@drawable/piplipbutton"
         android:layout_marginLeft="20dp"/>
@@ -54,7 +60,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/piplupimg"
-        android:layout_marginTop="410dp"
+        android:layout_marginTop="440dp"
         android:layout_marginLeft="280dp"/>
 
 </RelativeLayout>
