--- a/app/src/main/res/layout/activity_unova.xml
+++ b/app/src/main/res/layout/activity_unova.xml
@@ -9,13 +9,19 @@
         android:layout_height="wrap_content"
         android:src="@drawable/unova"
         android:adjustViewBounds="true"
-        android:layout_marginTop="22dp"
-        />
+        android:layout_marginTop="22dp"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/blackwhitetext"
+        android:layout_marginTop="240dp"
+        android:layout_centerHorizontal="true"/>
 
     <Button
         android:layout_width="250dp"
         android:layout_height="60dp"
-        android:layout_marginTop="270dp"
+        android:layout_marginTop="280dp"
         android:id="@+id/snivy"
         android:background="@drawable/snivybutton"
         android:layout_marginLeft="20dp"/>
@@ -24,13 +30,13 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/snivyimg"
-        android:layout_marginTop="270dp"
+        android:layout_marginTop="280dp"
         android:layout_marginLeft="280dp"/>
 
     <Button
         android:layout_width="250dp"
         android:layout_height="60dp"
-        android:layout_marginTop="340dp"
+        android:layout_marginTop="360dp"
         android:id="@+id/tepig"
         android:background="@drawable/tepigbutton"
         android:layout_marginLeft="20dp"/>
@@ -39,13 +45,13 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/tepigimg"
-        android:layout_marginTop="340dp"
+        android:layout_marginTop="360dp"
         android:layout_marginLeft="280dp"/>
 
     <Button
         android:layout_width="250dp"
         android:layout_height="60dp"
-        android:layout_marginTop="410dp"
+        android:layout_marginTop="440dp"
         android:id="@+id/oshawott"
         android:background="@drawable/oshawottbutton"
         android:layout_marginLeft="20dp"/>
@@ -54,7 +60,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/oshawottimg"
-        android:layout_marginTop="410dp"
+        android:layout_marginTop="440dp"
         android:layout_marginLeft="280dp"/>
 
 </RelativeLayout>
