--- a/app/src/main/res/layout/activity_charmander.xml
+++ b/app/src/main/res/layout/activity_charmander.xml
@@ -22,4 +22,28 @@
         android:layout_marginTop="110dp"/>
 
 
+        <VideoView
+            android:layout_width="250dp"
+            android:layout_height="150dp"
+            android:id="@+id/videoView1"
+            android:layout_marginTop="390dp"
+            android:layout_marginLeft="20dp"/>
+
+        <Button
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:id="@+id/playbutton"
+            android:layout_marginLeft="280dp"
+            android:layout_marginTop="410dp"
+            android:background="@drawable/play"/>
+
+        <Button
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:id="@+id/pausebutton"
+            android:layout_marginLeft="280dp"
+            android:layout_marginTop="460dp"
+            android:background="@drawable/pause"/>
+
+
 </RelativeLayout>
