--- a/app/src/main/res/layout/activity_bulbasaur.xml
+++ b/app/src/main/res/layout/activity_bulbasaur.xml
@@ -23,7 +23,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/bulbasaureve"
+        android:src="@drawable/bulbasaurevo"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="265dp"/>
 
@@ -32,13 +32,13 @@
         android:layout_height="150dp"
         android:id="@+id/videoView1"
         android:layout_marginTop="400dp"
-        android:layout_marginLeft="20dp"/>
+        android:layout_marginLeft="30dp"/>
 
     <Button
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:id="@+id/playbutton"
-        android:layout_marginLeft="280dp"
+        android:layout_marginLeft="290dp"
         android:layout_marginTop="420dp"
         android:background="@drawable/play"/>
 
@@ -46,7 +46,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:id="@+id/pausebutton"
-        android:layout_marginLeft="280dp"
+        android:layout_marginLeft="290dp"
         android:layout_marginTop="470dp"
         android:background="@drawable/pause"/>
 
