--- a/app/src/main/res/layout/activity_treecko.xml
+++ b/app/src/main/res/layout/activity_treecko.xml
@@ -20,4 +20,34 @@
         android:layout_marginLeft="150dp"
         android:layout_marginTop="110dp"/>
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/treeckoevo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="265dp"/>
+
+    <VideoView
+        android:layout_width="250dp"
+        android:layout_height="150dp"
+        android:id="@+id/videoView1"
+        android:layout_marginTop="400dp"
+        android:layout_marginLeft="30dp"/>
+
+    <Button
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/playbutton"
+        android:layout_marginLeft="290dp"
+        android:layout_marginTop="420dp"
+        android:background="@drawable/play"/>
+
+    <Button
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/pausebutton"
+        android:layout_marginLeft="290dp"
+        android:layout_marginTop="470dp"
+        android:background="@drawable/pause"/>
+
 </RelativeLayout>
