Bug fixed with Oshawott activity

--- a/app/src/main/res/layout/activity_oshawott.xml
+++ b/app/src/main/res/layout/activity_oshawott.xml
@@ -2,7 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="danielfears.pokedex.OshawottActivity">
+    tools:context="danielfears.pokedex.OshawottActivity"
+    android:background="@drawable/background"
+    >
 
     <SurfaceView
         android:layout_width="116dp"
